--- a/CommunityKitchen/Assets/css/style.css
+++ b/CommunityKitchen/Assets/css/style.css
@@ -2801,6 +2801,7 @@ default-form style-two
     font-size: 16px;
     box-shadow: none;
     border: 0px;
+    color:#848484;
     padding: 12px 15px;
     background: #1e1d1d;
     border-radius: 20px;
