--- a/CommunityKitchen/Views/Home/About.cshtml
+++ b/CommunityKitchen/Views/Home/About.cshtml
@@ -7,12 +7,12 @@
         ViewBag.Title = "CauseIndex";
     }*@
 @*.section-title {
-    position: relative;
-    margin-bottom: 3px;
-    padding-top: :30px;
-    margin-top: 61px;
-}*@
-<section class="page-banner" style="background-image: url('../Assets/images/ImagesSaved/4.jpg'); padding:120px 0px 195px;">
+        position: relative;
+        margin-bottom: 3px;
+        padding-top: :30px;
+        margin-top: 61px;
+    }*@
+<section class="page-banner" style="background-image: url('../Assets/images/team/aboutus1.jpg'); padding: 120px 0px 195px;">
     <div class="container" style="height:80px;">
         <div class="section-title">
             <h1><span style="font-size: 48px; color: #fff;">about </span> <span style="font-style: italic;font-size: 48px; ">us</span></h1>
@@ -33,118 +33,122 @@
 </section>
 <!--start our-team-->
 <section class="our-team style-two">
-        <div class="item-box">
-            <div class="row d-flex justify-content-start" style="display:inline;">
+    <div class="item-box">
+        <div class="row d-flex justify-content-start" style="display:inline;">
 
-                <div class="col">
-                    <div class="item">
-                        <div class="bg-area">
-                            <div class="image-box-team" style="padding-left:50px;">
-                                <img src="~/Assets/images/team/Mmpr-black.jpg" style="height:380px;width:200px; padding-bottom:20px" />
+            <div class="col">
+                <div class="item">
+                    <div class="bg-area">
+                        <div class="image-box-team">
+                            <img src="~/Assets/images/team/dimitris.jpg" />
+                            @*<img src="~/Assets/images/team/Mmpr-black.jpg" style="height:380px;width:200px; padding-bottom:20px" />*@
+                        </div>
+                        <div class="content-box">
+                            <h4>Stratsianis</h4>
+                            <h4>Dimitris</h4>
+                            <div class="text">
+                                <p>Full Stack .Net Developer</p>
                             </div>
-                            <div class="content-box">
-                                <h4>Stratsianis</h4>
-                                <h4>Dimitris</h4>
-                                <div class="text">
-                                    <p>Full Stack .Net Developer</p>
-                                </div>
-                                <ul class="social">
-                                    <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                                </ul>
-                            </div>
+                            <ul class="social">
+                                <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                                <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+                            </ul>
                         </div>
                     </div>
                 </div>
-
-
-
-                <div class="col">
-                    <div class="item">
-                        <div class="bg-area">
-                            <div class="image-box-team" style="padding-left:50px;">
-                                <img src="~/Assets/images/team/Mmpr-blue.jpg" style="height:380px;width:200px; padding-bottom:20px" />
-                            </div>
-                            <div class="content-box">
-                                <h4>Mihailidis</h4>
-                                <h4>Giannis</h4>
-                                <div class="text">
-                                    <p>Full Stack .Net Developer</p>
-                                </div>
-                                <ul class="social">
-                                    <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col">
-                    <div class="item">
-                        <div class="bg-area">
-                            <div class="image-box-team" style="padding-left:50px;">
-                                <img src="~/Assets/images/team/Mmpr-red.jpg" style="height: 380px; width: 200px; padding-bottom: 20px" />
-                            </div>
-                            <div class="content-box">
-                                <h4>Karakasidis</h4>
-                                <h4>Ioannis</h4>
-                                <div class="text">
-                                    <p>Full Stack .Net Developer</p>
-                                </div>
-                                <ul class="social">
-                                    <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col">
-                    <div class="item">
-                        <div class="bg-area">
-                            <div class="image-box-team" style="padding-left:50px;">
-                                <img src="~/Assets/images/team/yellow.jpg" style="height:380px;width:200px; padding-bottom:20px" />
-                            </div>
-                            <div class="content-box">
-                                <h4>Theofilaktidou</h4>
-                                <h4>Niki</h4>
-                                <div class="text">
-                                    <p>Full Stack .Net Developer</p>
-                                </div>
-                                <ul class="social">
-                                    <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="item">
-                        <div class="bg-area">
-                            <div class="image-box-team" style="padding-left:50px;">
-                                <img src="~/Assets/images/team/greenranger.jpg" style="height:380px;width:200px; padding-bottom:20px" />
-                            </div>
-                            <div class="content-box">
-                                <h4>Likos</h4>
-                                <h4> Costas</h4>
-                                <div class="text">
-                                    <p>Full Stack .Net Developer</p>
-                                </div>
-                                <ul class="social">
-                                    <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                                    <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
             </div>
+
+            <div class="col">
+                <div class="item">
+                    <div class="bg-area">
+                        <div class="image-box-team">
+                            <img src="~/Assets/images/team/Giannis.png" />
+                            @*<img src="~/Assets/images/team/Mmpr-blue.jpg" style="height:380px;width:200px; padding-bottom:20px" />*@
+                        </div>
+                        <div class="content-box">
+                            <h4>Mihailidis</h4>
+                            <h4>Giannis</h4>
+                            <div class="text">
+                                <p>Full Stack .Net Developer</p>
+                            </div>
+                            <ul class="social">
+                                <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                                <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="item">
+                    <div class="bg-area">
+                        <div class="image-box-team">
+                            <img src="~/Assets/images/team/ioannis.png" />
+                            @*<img src="~/Assets/images/team/Mmpr-red.jpg" style="height: 380px; width: 200px; padding-bottom: 20px" />*@
+                        </div>
+                        <div class="content-box">
+                            <h4>Karakasidis</h4>
+                            <h4>Ioannis</h4>
+                            <div class="text">
+                                <p>Full Stack .Net Developer</p>
+                            </div>
+                            <ul class="social">
+                                <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                                <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="item">
+                    <div class="bg-area">
+                        <div class="image-box-team">
+                            <img src="~/Assets/images/team/Kostas.png" />
+                            @*<img src="~/Assets/images/team/greenranger.jpg" style="height:380px;width:200px; padding-bottom:20px" />*@
+                        </div>
+                        <div class="content-box">
+                            <h4>Likos</h4>
+                            <h4> Costas</h4>
+                            <div class="text">
+                                <p>Full Stack .Net Developer</p>
+                            </div>
+                            <ul class="social">
+                                <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                                <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="item">
+                    <div class="bg-area">
+                        <div class="image-box-team">
+                            <img src="~/Assets/images/team/Niki.png" />
+                            @*<img src="~/Assets/images/team/yellow.jpg" style="height:380px;width:200px; padding-bottom:20px" />*@
+                        </div>
+                        <div class="content-box">
+                            <h4>Theofilaktidou</h4>
+                            <h4>Niki</h4>
+                            <div class="text">
+                                <p>Full Stack .Net Developer</p>
+                            </div>
+                            <ul class="social">
+                                <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                                <li><a href="#"><span class="fa fa-twitter"></span></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
-   
+    </div>
+
 
 </section>
 <!--end our-team-->
