--- a/CommunityKitchen/Views/Item/Delete.cshtml
+++ b/CommunityKitchen/Views/Item/Delete.cshtml
@@ -6,28 +6,28 @@
 <div class="default-form-area" style="margin-top: 34px !important; display: flex; justify-content: center">
     <div id="contact-form" class="default-form">
         <div class="section-title">
-            <h1 style="margin-left:45px">Are you sure you want to <span>delete</span> this Cause?</h1>
+            <h1 style="margin-left:45px">Are you sure you want to <span>delete</span> this Item?</h1>
         </div>
         <div class="row clearfix" style="justify-content: center">
             <div class="col-md-12 col-sm-12 col-xs-6">
                 <hr />
                 <div class="form-group">
                     <div class="section-title">
-                        <h2>Title</h2>
+                        <h4>Title</h4>
                     </div>
                     @Html.DisplayFor(model => model.ItemName)
                 </div>
 
                 <div class="form-group">
                     <div class="section-title">
-                        <h2>Description</h2>
+                        <h4>Description</h4>
                     </div>
                     @Html.DisplayFor(model => model.Quantity)
                 </div>
 
                 <div class="form-group">
                     <div class="section-title">
-                        <h2>Photo</h2>
+                        <h4>Photo</h4>
                     </div>
                     @Html.DisplayFor(model => model.Price)
                 </div>
